k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hivebox

  template:
    metadata:
      labels:
        app: hivebox

    spec:
      containers:
        - name: hivebox
          image: hivebox:v0.1.0
          imagePullPolicy: Never

          ports:
            - name: http
              containerPort: 8000
